--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="no_connection_message">No connection</string>
+    <string name="service_unavailable_message">Service unavailable</string>
+    <string name="something_went_wrong">Something went wrong</string>
 </resources>
